assessment for level one and supporting docs

--- a/basics.html
+++ b/basics.html
@@ -28,5 +28,59 @@
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+      <div class="FirstList">  <!--this allows you to name  a certain ammount of
+      text regardless of their type the same thing so you can modify it all
+    together in CSS <span>Does the same thing but for the text in it (line)</span>-->
+    <ol>
+      <li>This</li>
+      <li>is</li>
+      <li>an</li>
+      <li>ordered</li>
+      <li>list</li>
+    </ol>
+      </div>
+
+    <ol>
+      <li>This</li>
+      <li>is</li>
+      <li>an</li>
+      <li>ordered</li>
+      <li>list</li>
+    </ol>
+    <ul>
+      <li>This</li>
+      <li>is</li>
+      <li>an</li>
+      <li>unordered</li>
+      <li>list</li>
+    </ul>
+    <ol>
+      <li>normal ordered list</li>
+      <li>with...</li>
+      <ul>
+        <li>a nested</li>
+        <li>list inside</li>
+        <ul>
+          <li><strong>im even deeper</strong></li>
+        </ul>
+      </ul>
+    </ol>
+
+    <img src="django.png" alt="im missing"> <!--  use this for inserting images. if image not in
+    same directory then you need to use full path use 'alt' in case it cant find the original
+  image and it will display that messege or a different image -->
+
+
+
+
+
+
+
+
+
+  <a href="newpage2.html">next page</a>
+   <!-- link to different page -->
+  <a href="http://www.google.com">google</a>
+
   </body>
 </html>
