--- a/Level1Assessment.html
+++ b/Level1Assessment.html
@@ -7,7 +7,8 @@
   <body>
     <h1>Welcome to my Website!</h1>
     <p>I'm excited to eventually learn Django!</p>
-    <a href="http://www.djangoproject.com/">Here is a link to the official Django Website</a>
+    <a href="http://www.djangoproject.com/">
+      Here is a link to the official Django Website</a>
     <p>Here is a picture of the Python Logo:  </p>
     <img src="python-Logo.png" alt="">
     <p>Here are three reasons Django is cool</p>
