--- a/basics2.html
+++ b/basics2.html
@@ -7,7 +7,7 @@
   <body>
     <table border="1">
       <thead>
-        <!-- this is going to decide how many rows there will be  -->
+        <!-- these elements are going to decide how many rows there will be  -->
         <th>Number</th>
         <th>Color</th>
         <th>Country</th>
@@ -23,5 +23,23 @@
         <td>Canada</td>
       </tr>
     </table>
+
+    <form>
+      <h1>Log in</h1>
+      <h2>Please input your Email and password</h2>
+      <input type="email" name="useremail" value="ex: user@gmail.com">
+      <input type="password" name="password" value="">
+      <input type="submit" name="" value="Submit">
+    </form>
+
+    <form>
+      <h2>choose a color </h2>
+      <h3>click button</h3>
+      <input type="color" name="" value="">
+    </form>
+    <form>
+      <h2>Enter random text</h2>
+      <input type="text" name="" value="">
+    </form>
   </body>
 </html>
