--- a/basics.html
+++ b/basics.html
@@ -81,6 +81,6 @@
   <a href="newpage2.html">next page</a>
    <!-- link to different page -->
   <a href="http://www.google.com">google</a>
-
+  <a href="basics.HTML">go to basics2</a>
   </body>
 </html>
