--- a/basics2.html
+++ b/basics2.html
@@ -24,7 +24,7 @@
       </tr>
     </table>
 
-    <form>
+    <form action="https://www.google.com" method="get">
       <h1>Log in</h1>
       <h2>Please input your Email and password</h2>
       <input type="email" name="useremail" value="ex: user@gmail.com">
