added next page after sign up

--- a/Level2Assessment.html
+++ b/Level2Assessment.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Course Sign Up</title>
   </head>
   <body>
     <h1>Course Sign Up Page</h1>
     <p>Please Note: First Name, Last Name, Password, and Email are required</p>
-    <form method="get">
+    <form action="Level1Assessment.html"method="post">
       <label for="firstname">First Name:</label>
       <input id="firstname"type="text" name="" placeholder="First Name" required>
       <label for="lastname">Last Name: </label>
@@ -31,27 +31,6 @@
       <p></p>
       <input type="submit" name="" value="Sign Up">
     </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
