--- a/Level2Assessment.html
+++ b/Level2Assessment.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Course Sign Up Page</h1>
     <p>Please Note: First Name, Last Name, Password, and Email are required</p>
-    <form action="Level1Assessment.html"method="post">
+    <form action="Level1Assessment.html"method="get">
       <label for="firstname">First Name:</label>
       <input id="firstname"type="text" name="" placeholder="First Name" required>
       <label for="lastname">Last Name: </label>
