--- a/javasript/jsLvl2/partOne.html
+++ b/javasript/jsLvl2/partOne.html
@@ -6,8 +6,6 @@
   </head>
   <body>
     <h1 style="margin-left: 300px">Functions</h1>
-    <script src="part1Functions.js">
-
-    </script>
+    <script src="part1Functions.js"></script>
   </body>
 </html>
