--- a/javasript/jsLvl2/part6.html
+++ b/javasript/jsLvl2/part6.html
@@ -5,6 +5,6 @@
     <title>homework</title>
   </head>
   <body>
-    <script src="Part6_Objects_Exercise.js"></script>
+    <script src="part6_objects_exercise.js"></script>
   </body>
 </html>
