--- a/Document_Object_Model/trippleTTT.html
+++ b/Document_Object_Model/trippleTTT.html
@@ -2,15 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
+    <title>Cosa Tic Tac Toe</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="TTTmaster.css">
+
+</script>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1 class="display-4">Welcome to Tic Tac Toe!</h1>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Restart</a>
-    </div>
+    <div class="container">
 
+
+      <div class="jumbotron">
+        <h1 class="display-4">Welcome to Tic Tac Toe!</h1>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Restart</a>
+      </div>
+      <table>
+        <tr>
+          <td id="topLeft"></td>
+          <td id="topMiddle"></td>
+          <td id="topRight"></td>
+        </tr>
+        <tr>
+          <td id="middleLeft"></td>
+          <td id="middle"></td>
+          <td id="middleRight"></td>
+        </tr>
+        <tr>
+          <td id="bottomLeft"></td>
+          <td id="bottomMiddle"></td>
+          <td id="bottomRight"></td>
+        </tr>
+      </table>
+    </div>
+    <script src="TTT.js" type="text/javascript">
+
+    </script>
   </body>
 </html>
