--- a/Document_Object_Model/trippleTTT.html
+++ b/Document_Object_Model/trippleTTT.html
@@ -15,7 +15,8 @@
 
       <div class="jumbotron">
         <h1 class="display-4">Welcome to Tic Tac Toe!</h1>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Restart</a>
+        <p>Single click for X double click for O!</p>
+        <a class="btn btn-primary btn-lg" href="trippleTTT.html" role="button">Restart</a>
       </div>
       <table>
         <tr>
