project solution start

--- a/Document_Object_Model/trippleTTT.html
+++ b/Document_Object_Model/trippleTTT.html
@@ -15,7 +15,7 @@
       <div class="jumbotron">
         <h1 class="display-4">Welcome to Tic Tac Toe!</h1>
         <p>Single click for X double click for O!</p>
-        <a class="btn btn-primary btn-lg" href="trippleTTT.html" role="button">Restart</a>
+        <a  id="b"class="btn btn-primary btn-lg" href="trippleTTT.html" role="button">Restart</a>
       </div>
       <table>
         <tr>
@@ -35,8 +35,8 @@
         </tr>
       </table>
     </div>
-    <script src="TTT.js" type="text/javascript">
-
-    </script>
+    <script src="TTT.js" type="text/javascript"></script>
+    <!-- <script src="gameSolution.js" type="text/javascript"></script> -->
+<!-- Uncomment the 'gameSolution.js'  to link the lesson game solution -->
   </body>
 </html>
