--- a/Document_Object_Model/trippleTTT.html
+++ b/Document_Object_Model/trippleTTT.html
@@ -35,8 +35,8 @@
         </tr>
       </table>
     </div>
-    <script src="TTT.js" type="text/javascript"></script>
-    <!-- <script src="gameSolution.js" type="text/javascript"></script> -->
+    <!-- <script src="TTT.js" type="text/javascript"></script> -->
+    <script src="gameSolution.js" type="text/javascript"></script>
 <!-- Uncomment the 'gameSolution.js'  to link the lesson game solution -->
   </body>
 </html>
