--- a/jQuery/connect4.html
+++ b/jQuery/connect4.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Connect Four</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="connect_4_master.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="connect_4_master.css">
   </head>
   <body>
     <div class="container" align='center'>
       <h1>Welcome to Connect Four!</h1>
       <h2>The object of this game is to connect four of your chips in a row!</h2>
-      <h3>: it is your turn, please pick a column to drop your blue chip.</h3>
+      <h3 id="poo"> Lets start</h3>
         <table class="board">
           <tr>
             <td><button type="button"></button></td>
@@ -69,6 +69,7 @@
           </tr>
         </table>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="connect4_master.js"></script>
   </body>
 </html>
