--- a/html/future_portfolio.html
+++ b/html/future_portfolio.html
@@ -4,21 +4,68 @@
         <meta charset="utf-8">
         <title>My certificates</title>
         <style media="screen">
-            a{
+            /* a{
                 text-decoration: none;
                 text-transform: uppercase;
                 cursor: help;
                 content: open-quote;
             }
+            footer{
+                position: fixed;
+                margin-bottom: 0px;
+                overflow: hidden;
+                background-color: #333;
+                position: fixed;
+                width: 100vw;
+            }*/
+            .row {
+              width: 100%;
+
+            }.column {
+              padding: 10px;
+              margin: 20px;
+              width: 80%;
+              
+            }
+            a{
+                align-self: center;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
+        <footer>
+            <div class="row">
+                <div class="column">
+
+
         <a href="https://www.testdome.com/cert/10576d1d59bc4a15807f1b5c3b611df5" class="testdome-certificate-stamp silver"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">HTML/CSS </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
+</div>
+<div class="column">
         <a href="https://www.testdome.com/cert/0b3bd3e827e64cd480d8c70d2306bcbb" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">Python </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
+    </div>
+    <div class="column">
+
         <a href="https://www.testdome.com/cert/3fc39edc49ba425997336cca390041e2" class="testdome-certificate-stamp silver"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">Software Quality Assurance </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
+    </div>
+    <div class="row">
+
+
+    <div class="column">
+
         <a href="https://www.testdome.com/cert/577cc8ea2f154fa78280e4c18713fbc7" class="testdome-certificate-stamp silver"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">Logical Reasoning </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
+    </div>
+    <div class="column">
+
         <a href="https://www.testdome.com/cert/d03ab2e2d09449058aa1d49f166dc68f" class="testdome-certificate-stamp gold"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">Numerical Reasoning </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
+    </div>
+    <div class="column">
+
         <a href="https://www.testdome.com/cert/77e5be7870a246acb419351bf2e0959c" class="testdome-certificate-stamp silver"><span class="testdome-certificate-name">Yang M Rosado</span><span class="testdome-certificate-test-name">HTML/CSS and Bootstrap </span><span class="testdome-certificate-card-logo">TestDome<br />Certificate</span></a><script type="text/javascript">var stylesheet = "https://www.testdome.com/content/source/stylesheets/embed.css", link = document.createElement("link"); link.href = stylesheet, link.type = "text/css", link.rel = "stylesheet", link.media = "screen,print", document.getElementsByTagName("head")[0].appendChild(link);</script>
-        
+    </div>
+    </div>
+</div>
+
+        </footer>
     </body>
 </html>
